feature/44 configurando swagger para client
